crates/reinhardt-pages/tests/ui/style/fail/unknown_function.rs
use reinhardt_pages::{style_def};

#[style_def]
static STYLES: CardStyles = style! {
	.card {
		color: paint(red);
	}
};
fn main() {}
